ARROW-10955: [C++] Fix JSON reading of list(null) values